--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
       </div>
       <button type="button" id="search-btn" class="btn btn-primary mb-2">Search</button>
     </div>
+    <!-- <div class="d-flex justify-content-center d-none">
+      <div class="spinner-border" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div> -->
+    <div class="d-flex justify-content-center">
+      <div id="loading-spinner" class="spinner-border text-success d-none" role="status">
+        <span class="visually-hidden"></span>
+      </div>
+    </div>
     <section class="images">
       <div class="justify-content-around align-items-center mt-3 gallery-header mb-2">
         <h3 class="head-title text-center">Select image for create slider</h3>
